# pytest-playground

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: fibo.py  main.py  transformations.py
tests/: conftest.py  iterative_test.py  recursive_test.py  test_exception.py  test_fixture.py  test_mock.py
