[tool.poetry]
name = "pytest-playground"
version = "0.1.0"
description = ""
authors = ["Aymane BOUMAAZA <aymaneboumaaza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
coverage = "^6.5.0"
pytest-sugar = "^0.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
